# fastapi_test

./: .gitignore  Readme.md  pyproject.toml
app/: crud.py  logging_middleware.py  main.py  schemas.py
app/log/: logging_middleware.py
app/model/: crud.py  database.py  models.py  schemas.py
app/model/SQL/: blogs.sql  users.sql
app/routers/: blog.py  users.py
