[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Andy851127 <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
